// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsList should render correctly empty films array 1`] = `
<div
  className="search-results no-items"
>
  <EmptyList />
</div>
`;

exports[`ResultsList should render correctly films array 1`] = `
<div
  className="search-results false"
>
  <Connect(MoviesList) />
</div>
`;
